添加thrift服务及部分接口的实现